# polymarket-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: deploy.yml
config/: default.yaml  markets_filter.yaml  production.yaml
polymarket_common/: pyproject.toml
polymarket_common/polymarket_common/: config.py
polymarket_common/polymarket_common/execution/: auth.py  order_manager.py
polymarket_common/polymarket_common/notifications/: formatters.py  slack_notifier.py
polymarket_common/polymarket_common/persistence/: state_store.py  trade_log.py
polymarket_common/polymarket_common/utils/: logging_config.py  pricing.py  rate_limiter.py  retry.py
scripts/: check_balances.py  setup_wallet.py
services/crypto_sniper/: Dockerfile  pyproject.toml  start.sh
services/crypto_sniper/config/: default.yaml
services/crypto_sniper/crypto_sniper/: config.py  main.py  runner.py
services/crypto_sniper/crypto_sniper/anomaly/: detectors.py  hypotheses.py  monitor.py
services/crypto_sniper/crypto_sniper/dashboard/: app.py
services/crypto_sniper/crypto_sniper/dashboard/templates/: dashboard.html
services/crypto_sniper/crypto_sniper/feeds/: binance_feed.py  chainlink_feed.py  feed_manager.py
services/crypto_sniper/crypto_sniper/market/: discovery.py
services/crypto_sniper/crypto_sniper/scripts/: live_probe.py
services/crypto_sniper/crypto_sniper/signals/: black_scholes.py  oracle_lag.py  technical.py
services/crypto_sniper/crypto_sniper/sizing/: calibration.py  kelly.py
services/crypto_sniper/crypto_sniper/strategies/: base.py  oracle_sniper.py  ta_sniper.py
src/: config.py  main.py
src/analysis/: bayesian_engine.py  lmsr_engine.py  signal_registry.py
src/btc_sniper/: binance_feed.py  sniper.py  ta_strategy.py
src/dashboard/: app.py
src/execution/: auth.py  exit_manager.py  order_manager.py  position_tracker.py
src/feed/: order_book.py  rest_poller.py  ws_feed.py
src/market/: filters.py  models.py  scanner.py
src/notifications/: formatters.py  (+1 more)
tests/: conftest.py  test_bayesian_engine.py  test_btc_sniper.py  test_exit_manager.py  test_kelly_sizer.py  test_lmsr_engine.py  test_new_signals.py  test_order_manager_balance.py  test_weather.py
(+22 files in other folders)
